# fast-slow-biased-event-vpr

./: CITATION.cff  LICENSE  README.md  environment.yaml
data_processing/scripts/: process_data.sh
data_processing/src/: aedat_to_parquets.py  event_frames_with_ground_truth.py  generate_reports.py  rosbag_to_parquets.py
data_processing/src/event_vpr/: __init__.py  descriptor_comparisons.py  image_iterator.py  plot_results.py  utilities.py
event_vpr/scripts/: run_vpr.sh
event_vpr/src/: generate_image_descriptors.py  generate_similarity_matrix.py  normalize_frames.py  remove_stationary_frames_without_interpolation.py
event_vpr/src/event_vpr/: cli.py  image_descriptors.py  quantitatives.py  random_vpr.py
fast_and_slow_controller_ros/: CMakeLists.txt  package.xml
fast_and_slow_controller_ros/config/: config.yaml
fast_and_slow_controller_ros/include/fast_and_slow_controller/: DvsFbkControllerClass.hpp
fast_and_slow_controller_ros/src/: fast_and_slow_controller.cpp
